--- a/spaces/templates/spaces/search.html
+++ b/spaces/templates/spaces/search.html
@@ -11,8 +11,8 @@
             {% for result in res %}
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#a{{result.id}}"
-                            ><div class="portfolio-hover">
+                        <a class="portfolio-link" data-toggle="modal" href="#a{{result.id}}">
+                            <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="{{result.image.url}}" alt=""></a>
