--- a/spaces/templates/spaces/base.html
+++ b/spaces/templates/spaces/base.html
@@ -40,6 +40,36 @@
             </div>
         </nav>
         {% block content %}{% endblock %}
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-left"><a class="portfolio-link" data-toggle="modal" href="#contactme"><strong style="color: black;">For Contact, Click Me</strong></a></div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/mayank.gajpal" target="_blank"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-right"></div>
+                </div>
+            </div>
+        </footer>
+        <div class="portfolio-modal modal fade" id="contactme" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="{% static 'spaces/assets/img/close-icon.svg' %}" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here-->
+                                    <h2 class="text-uppercase">Name: Mayank Gajpal</h2>
+                                    <h2 class="text-uppercase">Email: mayankgajpal.11@gmail.com(all small)</h2>
+                                    <h2 class="text-uppercase">Address: Raipur, Chhattisgarh, India.</h2>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
