--- a/spaces/templates/spaces/base.html
+++ b/spaces/templates/spaces/base.html
@@ -40,6 +40,7 @@
             </div>
         </nav>
         {% block content %}{% endblock %}
+        {% if city %}
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -70,6 +71,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
