contact me edited with h5 tag, login button is added with margin bottom

--- a/spaces/templates/spaces/base.html
+++ b/spaces/templates/spaces/base.html
@@ -4,8 +4,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Find workspace according to your needs. Find Workspace near you.
+                                           Workspace for startups available. Workspace with all your amenities available.
+                                           Workspace with different capacity" />
+        <meta name="author" content="Mayank Gajpal" />
         <title>Find Workspace</title>
         <link rel="icon" type="image/x-icon" href="{% static 'spaces/assets/img/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
@@ -61,9 +63,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Name: Mayank Gajpal</h2>
-                                    <h2 class="text-uppercase">Email: mayankgajpal.11@gmail.com(all small)</h2>
-                                    <h2 class="text-uppercase">Address: Raipur, Chhattisgarh, India.</h2>
+                                    <h5>Name: Mayank Gajpal</h2>
+                                    <h5>Email: mayankgajpal.11@gmail.com(all small)</h2>
+                                    <h5>Address: Raipur, Chhattisgarh, India.</h2>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close</button>
                                 </div>
                             </div>
