--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -11,7 +11,7 @@
                     {% endfor %}
                 {% endif %}
             <div class="row align-items-stretch mb-5">
-                <div class="col-md-6" style="text-align: center;">
+                <div class="col-md-6" style="text-align: center; margin-bottom: 25px;">
                     <form id="contactForm"  method="POST" action="{% url 'login' %}">
                         {% csrf_token %}
                         <h2 class="section-heading text-uppercase" >Login</h2>
