--- a/spaces/templates/spaces/base.html
+++ b/spaces/templates/spaces/base.html
@@ -81,8 +81,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Contact form JS-->
         <script src="{% static 'spaces/assets/mail/jqBootstrapValidation.js' %}"></script>
-       <!-- <script src="{% static 'assets/mail/contact_me.js' %}"></script>-->
+        <script src="{% static 'spaces/assets/mail/contact_me.js' %}"></script>-->
         <!-- Core theme JS-->
-        <script src="{% static 'js/scripts.js' %}"></script>
+        <script src="{% static 'spaces/js/scripts.js' %}"></script>
     </body>
 </html>
